# http-nu

./: .gitignore  CLAUDE.md  Cargo.toml  NIXOS_PACKAGING_GUIDE.md  NIXOS_QUICK_REFERENCE.md  PARITY.md  README.md  build.rs  check.sh  dagger.json  package.nix.example
.claude/commands/: release.md
.dagger/: go.mod  main.go
.github/workflows/: build-musl.yml  ci.yml  release-binaries.yml
benchmarks/bench-broadcast-logging/: README.md  results.nuon  run.nu
benchmarks/bench-flask-comparison/: README.md  results.nuon  run.nu
benchmarks/bench-mpsc-logging/: README.md  results.nuon
changes/: v0.10.0.md  v0.10.1.md  v0.10.2.md  v0.11.0.md  v0.12.0.md  v0.13.0.md  v0.14.0.md  v0.15.0.md  v0.16.0.md  v0.17.0.md  v0.17.1.md  v0.17.2.md  v0.2.md  v0.3.0.md  v0.4.0.md  v0.4.2.md  v0.4.3.md  v0.4.5.md  v0.4.6.md  v0.5.0.md  v0.5.1.md  v0.6.0.md  v0.7.0.md  v0.7.1.md  v0.8.0.md  v0.9.0.md  v0.9.1.md
docs/adr/: 0001-explicit-append-html-dsl.md  0002-html-escaping-strategy.md  0003-html-dsl-design.md  0004-custom-event-system.md  0005-md-highlight-escaping.md  0006-xs-lifecycle-topics.md
docs/how-to/: refresh-datastar-sdk.md
docs/issues/: 0000-flaky-parse-error-test.md  0001-markdown-javascript-urls.md
examples/: README.md  basic.nu  serve.nu  stor.nu  topic-placeholder.nu
examples/2048/: .gitignore  CLAUDE.md  README.md  auth.nu  bench.nu  check.sh  game.nu  migrate-topics.nu  mod.nu  screenshot.mjs  serve.nu  snapshot-actor.nu  strip-store.nu  test.mjs  test.nu
examples/2048-animation/: README.md  serve.nu
examples/2048/design/: design.css  serve.nu
examples/2048/notes/: pages.nu  serve.nu
examples/2048/notes/content/: what-is-2048.md  why-is-this-so-addictive.md
examples/2048/research/: change-request.md  origin.md
examples/2048/research/design-ethics/: 01-the-debate.md  README.md  sources.md
examples/2048/research/history/: 01-threes.md  02-1024.md  03-2048-launch.md  04-clones-and-controversy.md  05-legacy.md  README.md  sources.md
examples/2048/research/incrementals/: 01-genre-lineage.md  02-the-prestige-mechanic.md  03-universal-paperclips.md  04-the-unconstrained-version.md  README.md  sources.md
examples/2048/research/psychology/: 01-the-dopamine-account.md  02-behavioral-design.md  03-flow-and-friction.md  04-where-the-evidence-thins.md  README.md  sources.md
examples/2048/static/: game-board.js  mobygratis-license.txt  script.js  scrub-knob.js  styles.css
examples/2048/test/: _baseline.mjs  bench-leaderboard.nu  bench-leaderboard.sh  bench.nu  check.sh  probe-vt.mjs  screenshot.mjs  shot-md.mjs  shot-splash.mjs  test-snapshot-actor.nu  test-sse-wc.nu  test-sse.nu  test.mjs  test.nu
examples/2048/tfe/: game.nu  leaderboard-actor.nu  mod.nu  palettes.nu  presence-actor.nu  render.nu  snapshot-actor.nu  sse.nu  store.nu
examples/2048/tfe/templates/: layout.html  vt-tuner.html
examples/blog/: serve.nu
examples/cargo-docs/: README.md  serve.nu
examples/datastar-counter/: serve.nu
examples/datastar-sdk/: README.md  serve.nu
examples/datastar-sdk-test/: README.md  serve.nu
examples/hi-other-agent-session-dont-touch-this-folder/: serve.nu
examples/mermaid-editor/: README.md  serve.nu
examples/mermaid-editor/assets/: mermaid-diagram.js
examples/quotes/: README.md  quotes.json  serve.nu
examples/quotes/www/: index.html
examples/tao/: README.md  data.json  page.html  serve.nu  test.nu
examples/tao/static/css/: gold.css  site.css
examples/template-inheritance/: page.html  serve.nu
examples/templates/: README.md  base.html  nav.html  serve.nu
examples/templates/topics/: base.html  nav.html
scripts/: check.sh
src/: bus.rs  commands.rs  compression.rs  engine.rs  handler.rs  lib.rs  listener.rs  logging.rs  main.rs  pty.rs  request.rs  response.rs  store.rs  test_engine.rs  test_handler.rs  to_sse.rs  worker.rs
src/stdlib/: mod.nu  mod.rs
src/stdlib/datastar/: datastar@1.0.0-RC.7.js  datastar@1.0.0-RC.7.js.br  datastar@1.0.0-RC.8.js.br  datastar@1.0.1.js.br  datastar@1.0.2.js  datastar@1.0.2.js.br  mod.nu
src/stdlib/html/: mod.nu
src/stdlib/http/: mod.nu
src/stdlib/router/: mod.nu
syntaxes/: nushell.sublime-syntax
tests/: brotli_compression.rs  cert.pem  combined.pem  eval_test.rs  integration_test.rs  key.pem  pty_parity.nu  pty_smoke.nu  server_missing_host.rs  server_test.rs  test_datastar.nu  test_html.nu  test_router.nu
tests-browser/: 2048.test.mjs  README.md  package.json
tests/common/: mod.rs
tests/test_plugin/: Cargo.toml
tests/test_plugin/src/: main.rs
www/: CLAUDE.md  README.md  serve.nu
www/assets/: core.css
www/content/: datastar-demo.md  getting-started.md
www/snippets/: datastar.nu  splash.nu
