[package]
name = "http-nu"
version = "0.6.0"
edition = "2021"
rust-version = "1.88.0"
description = "The surprisingly performant, Nushell-scriptable HTTP server that fits in your back pocket."
license = "MIT"
repository = "https://github.com/cablehead/http-nu"
readme = "README.md"
homepage = "https://github.com/cablehead/http-nu"
keywords = ["http", "nushell", "server", "cli", "http-server"]
categories = ["web-programming", "command-line-utilities"]

[[bin]]
name = "http-nu"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
http-serde = "2.1.1"

http = "1.1.0"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "server-auto"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }

bytes = "1.6.0"
url = "2.5.0"

nu-cli = "0.109.1"
nu-cmd-lang = "0.109.1"
nu-cmd-extra = "0.109.1"
nu-command = "0.109.1"
nu-engine = "0.109.1"
nu-parser = "0.109.1"
nu-protocol = "0.109.1"
ctrlc = "3.4"
arc-swap = "1.7"
rustls = { version = "0.23.28", features = ["aws_lc_rs"] }
rustls-pemfile = "2.1.0"
tokio-rustls = "0.26.0"
scru128 = { version = "3", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tower = { version = "0.5.2", features = ["util"] }
ureq = { version = "2.12.1", default-features = false, features = ["tls"] }
brotli = "8"
http_encoding_headers = "0.2.0"
headers = "0.4.1"
minijinja = { version = "2", features = ["json", "urlencode", "loop_controls"] }
nu-utils = "0.109.1"



[dev-dependencies]
tempfile = "3.10.1"
assert_cmd = "2.0"
nix = { version = "0.30", features = ["signal", "process"] }
sysinfo = "0.30.12"
brotli = "8"





