[workspace]
members = [".", "tests/test_plugin"]

[package]
name = "http-nu"
version = "0.10.1"
edition = "2021"
rust-version = "1.88.0"
description = "The surprisingly performant, Datastar-ready, Nushell-scriptable HTTP server that fits in your back pocket."
license = "MIT"
repository = "https://github.com/cablehead/http-nu"
readme = "README.md"
homepage = "https://github.com/cablehead/http-nu"
keywords = ["http", "nushell", "server", "cli", "http-server"]
categories = ["web-programming", "command-line-utilities"]

[[bin]]
name = "http-nu"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
http-serde = "2.1.1"

http = "1.1.0"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "server-auto"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io", "compat"] }
futures-util = "0.3"

bytes = "1.6.0"
url = "2.5.0"

nu-cli = "0.110.0"
nu-cmd-lang = "0.110.0"
nu-cmd-extra = "0.110.0"
nu-command = { version = "0.110.0", features = ["sqlite"] }
nu-engine = "0.110.0"
nu-parser = "0.110.0"
nu-plugin-engine = "0.110.0"
nu-protocol = { version = "0.110.0", features = ["plugin"] }
ctrlc = "3.4"
arc-swap = "1.7"
rustls = { version = "0.23.28", features = ["aws_lc_rs"] }
rustls-pemfile = "2.1.0"
tokio-rustls = "0.26.0"
scru128 = { version = "3", features = ["serde"] }
miette = "7"
crossterm = "0.29"
chrono = "0.4"
ipnet = "2"
tower-http = { version = "0.6.6", features = ["fs"] }
tower = { version = "0.5.2", features = ["util"] }
brotli = "8"
http_encoding_headers = "0.2.0"
headers = "0.4.1"
minijinja = { version = "2", features = ["json", "urlencode", "loop_controls", "loader"] }
nu-utils = "0.110.0"
typetag = "0.2"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
syntect = "5.3.0"
syntect-assets = "0.23.6"
pulldown-cmark = "0.12.2"
notify = "8"

[dependencies.cross-stream]
version = "0.9.3"
optional = true

[features]
default = ["cross-stream"]

[target.'cfg(windows)'.dependencies]
win_uds = "=0.2.1"

[build-dependencies]
syntect = "5.3.0"


[profile.release]
lto = true
codegen-units = 1

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/http-nu-v{ version }-{ target-family }.tar.gz"
bin-dir = "http-nu-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/http-nu-v{ version }-linux-amd64.tar.gz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/http-nu-v{ version }-linux-amd64.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/http-nu-v{ version }-linux-arm64.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/http-nu-v{ version }-linux-arm64.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/http-nu-v{ version }-darwin-arm64.tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/http-nu-v{ version }-windows-amd64.tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/http-nu-v{ version }-windows-amd64.tar.gz"

[dev-dependencies]
tempfile = "3.10.1"
assert_cmd = "2.0"
predicates = "3"
nix = { version = "0.30", features = ["signal", "process"] }
sysinfo = "0.30.12"
brotli = "8"
minijinja = "2"





